tests/lustre/typechecking/shouldFail/test_node_decls2.lus
node x74 (e1, e2, e3: int; f2: bool) returns (e: int^3; f: [int, bool, int]);
var g: [int, int];
var h: int;
let
   e = [e1, e2, e3];
   g, h = ((e1, e2), e3);
tel
